update deployment script to comment out safe.directory configuration and update links in index.html

--- a/index.html
+++ b/index.html
@@ -173,14 +173,14 @@
                 </div>
                 <div class="banner-buttons">
                     <a target="_blank"
-                        href="https://advanced-tpmart.techparkit.info/"
+                        href="https://tpmart.techparkit.info/"
                         class="wow fadeInUp my-2 btn btn-outline" data-wow-delay=".3s" style="
                 visibility: visible;
                 animation-delay: 0.3s;
                 animation-name: fadeInUp;
               ">Browse Frontend</a>
                     <a target="_blank"
-                        href="https://advanced-admin-tpmart.techparkit.info/"
+                        href="https://basic-admin-tpmart.techparkit.info/"
                         class="wow fadeInUp my-2 btn btn-outline" data-wow-delay=".3s" style="
                 visibility: visible;
                 animation-delay: 0.3s;
